--- a/WpfShapes/WpfShapes.csproj
+++ b/WpfShapes/WpfShapes.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArcArrow.cs" />
+    <Compile Include="GearWheel.cs" />
     <Compile Include="PieSliceCutMargin.cs" />
     <Compile Include="PieSliceMargin.cs" />
     <Compile Include="PieSlice.cs" />
